--- a/rolam.html
+++ b/rolam.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>Home page</title>
-	 <link rel="stylesheet" type="text/css" href="home.css">
+	 <link rel="stylesheet" type="text/css" href="index.css">
 
 	
 	<link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
 <header>
 <nav>
 	<div class="navigation">
-		<div class="menu"><a href="home.html">Kezdőlap </a></div>
+		<div class="menu"><a href="index.html">Kezdőlap </a></div>
 		<div class="menu"><a href="rolam.html">Rólam</a></div>
 		<div class="menu"><a href="munkaim.html">Munkáim</a></div>
 		<div class="menu"><a href="hogyan.html">Hogyan készült?</a></div>
