--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Home page</title>
+	<title>Kezdőlap</title>
 	 <link rel="stylesheet" type="text/css" href="index.css">
 
 	
